yaml-examples/mongo-express/mongo-express-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mongo-express
  name: mongo-express
spec:
  ports:
    - name: "8081"
      port: 8081
      targetPort: 8081
  selector:
    app: mongo-express
