yaml-examples/mongo-express/mongo-express-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mongo-express
  namespace: default
spec:
  rules:
  - host: mongo-express.lan
    http:
      paths:
      - backend:
          service:
            name: mongo-express
            port:
              number: 8081
        path: /
        pathType: ImplementationSpecific
